@@ -83,6 +83,9 @@ New commands:
   Cancel the card merging request.
 - card merge <merge list number>
   Merge the card into the item.
+- 'weight [<#>]' command tells you how much more stuff you can carry
+  (if you want to know how many more Red Potion you can carry, and
+  Red Potion weighs 7, then type 'weight 7').
 
 New config options:
 - partySkill: target_dead
